[gd_scene load_steps=6 format=2]

[ext_resource path="res://actor/BaseActor.tscn" type="PackedScene" id=1]
[ext_resource path="res://control/Damage.gd" type="Script" id=2]
[ext_resource path="res://actor/asteroid/Asteroid.gd" type="Script" id=3]
[ext_resource path="res://control/motion/Rotator.gd" type="Script" id=4]
[ext_resource path="res://actor/asteroid/Asteroid.png" type="Texture" id=5]

[node name="Asteroid" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 5 )

[node name="FollowTarget" parent="." index="2"]
acceleration = 180.0
damping = 0.0
max_speed = 35.0

[node name="Rotator" type="Node" parent="." index="3"]
script = ExtResource( 4 )
rotated_node_path = NodePath("../Sprite")

[node name="Damage" type="Node" parent="." index="5"]
script = ExtResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_hit_body"]
[connection signal="body_entered" from="." to="." method="_on_hit_body"]
[connection signal="critical_hit" from="Health" to="." method="_kill_subasteroid"]
[connection signal="no_health" from="Health" to="." method="_on_killed" flags=6]
